--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
           <i class="devicon-django-plain"></i>
 
           <i class="devicon-python-plain"></i>
+
+          <i class="devicon-react-original"></i>
+
           <hr class="w-6 lg:w-10 border-zinc-950" />
           <a
             class="text-base"
@@ -87,22 +90,51 @@
         </div>
       </div>
     </header>
+
     <main data-scroll-section class="px-5 lg:px-40 py-10 pb-40">
       <div class="grid lg:grid-cols-2 gap-10">
         <div class="flex flex-col gap-4">
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://words-search.vercel.app"
+            class="flex flex-col gap-4"
+          >
+            <div
+              class="border border-zinc-200 bg-zinc-50 aspect-video rounded-xl overflow-hidden group"
+            >
+              <img
+                src="assets/images/words-search.png"
+                class="group-hover:scale-105 transition duration-500"
+              />
+            </div>
+            <div>
+              <div class="font-medium">Words Search</div>
+              <div>Dictionary</div>
+            </div>
+          </a>
+        </div>
+
+        <a
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://beauty-fashion.netlify.app/"
+          class="flex flex-col gap-4"
+        >
           <div
             class="border border-zinc-200 bg-zinc-50 aspect-video rounded-xl overflow-hidden group"
           >
             <img
-              src="assets/images/words-search.png"
+              src="assets/images/First-Fashion.png"
               class="group-hover:scale-105 transition duration-500"
             />
           </div>
           <div>
-            <div class="font-medium">Words Search</div>
-            <div>Dictionary</div>
+            <div class="font-medium">First Fashion</div>
+            <div>A Beauty-Salon website</div>
           </div>
-        </div>
+        </a>
+
         <a
           target="_blank"
           rel="noopener noreferrer"
@@ -122,8 +154,29 @@
             <div>A fashion website</div>
           </div>
         </a>
+
+        <a
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://trift-fashion.netlify.app"
+          class="flex flex-col gap-4"
+        >
+          <div
+            class="border border-zinc-200 bg-zinc-50 aspect-video rounded-xl overflow-hidden group"
+          >
+            <img
+              src="assets/images/Food-App.png"
+              class="group-hover:scale-105 transition duration-500"
+            />
+          </div>
+          <div>
+            <div class="font-medium">Food Order</div>
+            <div>A food web app</div>
+          </div>
+        </a>
       </div>
     </main>
+
     <footer
       data-scroll-section
       class="flex flex-col px-5 lg:px-40 py-10 gap-28 bg-zinc-950 text-zinc-200"
