--- a/index.html
+++ b/index.html
@@ -170,8 +170,48 @@
             />
           </div>
           <div>
-            <div class="font-medium">Food Order</div>
-            <div>A food web app</div>
+            <div class="font-medium">Thrift Fashion</div>
+            <div>A fashion website</div>
+          </div>
+        </a>
+
+        <a
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://www.dropbox.com/t/1ny0P8nPOcNf4PQB"
+          class="flex flex-col gap-4"
+        >
+          <div
+            class="border border-zinc-200 bg-zinc-50 aspect-video rounded-xl overflow-hidden group"
+          >
+            <img
+              src="assets/images/City Guide tour.png"
+              class="group-hover:scale-105 transition duration-500"
+            />
+          </div>
+          <div>
+            <div class="font-medium">City Tour Mobile App</div>
+            <div>Click the image to the Apk 👆</div>
+          </div>
+        </a>
+
+        <a
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://www.dropbox.com/t/bzHvqtpgO1tURcav"
+          class="flex flex-col gap-4"
+        >
+          <div
+            class="border border-zinc-200 bg-zinc-50 aspect-video rounded-xl overflow-hidden group"
+          >
+            <img
+              src="assets/images/news app mobile ui.png"
+              class="group-hover:scale-105 transition duration-500"
+            />
+          </div>
+          <div>
+            <div class="font-medium">News Mobile App</div>
+            <div>Click the image to the Apk 👆</div>
           </div>
         </a>
       </div>
